@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-10T01:40:33Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 3,
+  "timestamp" : "2022-08-23T02:02:40Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
