@@ -1,22 +1,15 @@
 {
-  "timestamp" : "2022-08-22T16:24:44Z",
-  "count_outdated" : 2351,
-  "uniques_outdated" : 545,
-  "count" : 2371,
+  "timestamp" : "2022-08-23T02:02:40Z",
+  "count_outdated" : 2354,
+  "uniques_outdated" : 547,
+  "count" : 2372,
   "uniques" : 561,
   "clones" : [
     {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "uniques": 3,
+      "count": 2,
+      "count_minmax": [ 2, 4 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ]
     },
     {
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
