@@ -1,16 +1,11 @@
 {
-  "count": 20,
+  "count": 18,
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-08-10T00:00:00Z",
@@ -39,7 +34,7 @@
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
